[gd_scene load_steps=4 format=3 uid="uid://m7eflwquo8tu"]

[ext_resource type="Script" uid="uid://bjqe0ju7uy1qu" path="res://Scenes/MainScene.gd" id="1_nhkr4"]
[ext_resource type="PackedScene" uid="uid://ci37msycgxgxh" path="res://Scenes/PlayerCamera.tscn" id="2_7rqgy"]
[ext_resource type="PackedScene" uid="uid://21cu4wvygtnc" path="res://UI/Desktop/DesktopCanvas.tscn" id="3_qxria"]

[node name="MainScene" type="Node2D"]
script = ExtResource("1_nhkr4")

[node name="PlayerCamera" parent="." instance=ExtResource("2_7rqgy")]

[node name="DesktopCanvas" parent="." instance=ExtResource("3_qxria")]

[node name="CutSceneCanvas" type="CanvasLayer" parent="."]
layer = 2
follow_viewport_enabled = true
